--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.4.3",
-    "@angular/cdk": "^2.0.0-beta.11",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
-    "@angular/material": "^2.0.0-beta.11",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
@@ -28,6 +28,7 @@
     "dropzone": "^5.1.1",
     "jquery": "^3.2.1",
     "rxjs": "^5.4.2",
+    "xlsx": "^0.11.6",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
